--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               />
             </li>
           </ul>
+          <h5 id="check-percentage">Tip percentage should be under 100%</h5>
         </div>
       </div>
 
