--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <img src="/images/logo.svg" alt="img" />
-    <div class="container">
+    <header><img src="/images/logo.svg" alt="img" /></header>
+    <main class="container">
       <div class="input">
         <div class="bill">
           <label for="bill">Bill</label>
@@ -61,9 +61,9 @@
           <button class="btn" id="btn">RESET</button>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">Coded by <a href="#">Amit Kumar</a>.</div>
+    <footer class="attribution">Coded by <a href="#">Amit Kumar</a>.</footer>
 
     <script src="/script.js"></script>
   </body>
