--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header><img src="/images/logo.svg" alt="img" /></header>
     <main class="container">
-      <div class="input">
+      <section class="input">
         <div class="bill">
           <label for="bill">Bill</label>
           <input type="number" id="bill" placeholder="0" />
@@ -44,9 +44,9 @@
           </ul>
           <h5 id="check-percentage">Tip percentage should be under 100%</h5>
         </div>
-      </div>
+      </section>
 
-      <div class="output">
+      <section class="output">
         <div class="calculate">
           <div class="tip-amount">
             <small> Tip Amount <br /><span>/ person</span> </small>
@@ -60,7 +60,7 @@
         <div class="reset">
           <button class="btn" id="btn">RESET</button>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="attribution">Coded by <a href="#">Amit Kumar</a>.</footer>
