--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <header><img src="/images/logo.svg" alt="img" /></header>
-    <main class="container">
-      <section class="input">
+    <header role="banner"><img src="/images/logo.svg" alt="img" /></header>
+    <div class="container">
+      <main role="main" class="input">
         <div class="bill">
           <label for="bill">Bill</label>
           <input type="number" id="bill" placeholder="0" />
@@ -44,7 +44,7 @@
           </ul>
           <h5 id="check-percentage">Tip percentage should be under 100%</h5>
         </div>
-      </section>
+      </main>
 
       <section class="output">
         <div class="calculate">
@@ -61,9 +61,11 @@
           <button class="btn" id="btn">RESET</button>
         </div>
       </section>
-    </main>
+    </div>
 
-    <footer class="attribution">Coded by <a href="#">Amit Kumar</a>.</footer>
+    <footer role="doc-credits" class="attribution">
+      Coded by <a href="#">Amit Kumar</a>.
+    </footer>
 
     <script src="/script.js"></script>
   </body>
