--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <header role="banner"><img src="/images/logo.svg" alt="img" /></header>
+    <img src="/images/logo.svg" alt="img" />
     <div class="container">
       <main role="main" class="input">
         <div class="bill">
